force-app/main/default/objects/MS_Teams_Chat_Message__c/MS_Teams_Chat_Message__c.object-meta.xml
<CustomObject>
    <description>Stores permitted Microsoft Teams chat content and source identifiers for idempotent synchronization.</description>
    <label>MS Teams Chat Message</label>
    <nameField>
        <displayFormat>TCM-{00000000}</displayFormat>
        <label>Chat Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Teams Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>