force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Permitted source content only. Sanitize HTML before display; never inject directly into LWC DOM.</description>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>