force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Body_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Content_Type__c</fullName>
    <label>Body Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>