force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Deleted_At__c.field-meta.xml
<CustomField>
    <fullName>Deleted_At__c</fullName>
    <label>Deleted At</label>
    <type>DateTime</type>
</CustomField>