force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>SHA-256 hex digest of a canonical encoded tuple: meeting ID, Graph chat ID, Graph message ID. Computed by sync service.</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>