force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Graph_Chat_ID__c.field-meta.xml
<CustomField>
    <fullName>Graph_Chat_ID__c</fullName>
    <label>Graph Chat ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>