force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Last_Synchronized_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Synchronized_At__c</fullName>
    <label>Last Synchronized At</label>
    <type>DateTime</type>
</CustomField>