force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Graph messageType; kept as text to preserve new provider values.</description>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>