force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Message_URL__c.field-meta.xml
<CustomField>
    <fullName>Message_URL__c</fullName>
    <description>Source link. Application permits only trusted HTTPS URLs before rendering.</description>
    <label>Message URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>