force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Modified_At__c.field-meta.xml
<CustomField>
    <fullName>Modified_At__c</fullName>
    <label>Modified At</label>
    <type>DateTime</type>
</CustomField>