force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Reply_To_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Message_ID__c</fullName>
    <label>Reply To Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>