force-app/main/default/objects/MS_Teams_Chat_Message__c/fields/Sender_Entra_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Sender_Entra_User_ID__c</fullName>
    <label>Sender Entra User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>